CPG-DEV/src/objects/ProjectOpportunity__c.object
<CustomObject>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project_Opps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Opps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_Stage__c</fullName>
        <formula>TEXT(Project__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <label>Project Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProjOpp{000000}</displayFormat>
        <label>Project Opp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectOpportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>